--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         <section class="firstsection">
             <div class="leftsection"><font style="color: black;">Hi, I am </font> Mitali Kapil, <font style="color: black;">and I am <span id="element"></span></font><br><br>
                 <div class="button-group">
-                    <a href="path/to/your/resume.pdf" class="btn resume-btn" download>Download Resume</a>
+                    <a href="mitali resume.pdf" class="btn resume-btn" download>Download Resume</a>
                     <a href="https://www.linkedin.com/in/your-linkedin-username" target="_blank" class="btn linkedin-btn">LinkedIn</a>
                     <a href="https://github.com/your-github-username" target="_blank" class="btn github-btn">GitHub</a>
                 </div>
