Update index.html again

--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
             <div class="leftsection"><font style="color: black;">Hi, I am </font> Mitali Kapil, <font style="color: black;">and I am <span id="element"></span></font><br><br>
                 <div class="button-group">
                     <a href="mitali resume.pdf" class="btn resume-btn" download>Download Resume</a>
-                    <a href="https://www.linkedin.com/in/your-linkedin-username" target="_blank" class="btn linkedin-btn">LinkedIn</a>
-                    <a href="https://github.com/your-github-username" target="_blank" class="btn github-btn">GitHub</a>
+                    <a href="https://www.linkedin.com/in/mitali-kapil-4567a1236/" target="_blank" class="btn linkedin-btn">LinkedIn</a>
+                    <a href="https://github.com/mitalikapil" target="_blank" class="btn github-btn">GitHub</a>
                 </div>
             </div>
             
